--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hotkeys-hook": "^4.0.8",
     "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
